{
    "name": "Player_Test_Input",
    "maps": [
        {
            "name": "Player",
            "id": "4b0c7bd6-6638-4011-9cbc-62ddebb873dc",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "371e43a5-6f09-4480-94cb-09a9f8aeae9f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WSAD",
                    "id": "296d345e-cc20-4a38-a30e-3b35a331d965",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6cef6480-5c1b-4eb6-9252-07daa50e8cfe",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "K&M",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "37f896c9-c8b4-465e-b441-4e2de8c6a8c2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "K&M",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "06c9a54f-b918-46fd-9b73-3f039c2edc77",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "K&M",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8b45b8f6-ae9d-448e-a262-e7b7e7f21a97",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "K&M",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "UI",
            "id": "0eefe8b6-e17e-4168-9b52-c4a43f53e99d",
            "actions": [
                {
                    "name": "ItemDrop",
                    "type": "Button",
                    "id": "9197ee4f-c088-4095-8c9f-df06c3ba6fa4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ed3a93a1-1241-4146-b392-c560fc45a4bd",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "K&M",
                    "action": "ItemDrop",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "ShortCut",
            "id": "8a75062a-cb54-4885-b9c1-b6da3f37c3f5",
            "actions": [
                {
                    "name": "InventoryOnOff",
                    "type": "Button",
                    "id": "2b485883-8f4e-4f75-bbef-121ecf722e62",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ad53a4c7-f78e-4458-a27b-0b4005cdc7b6",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "K&M",
                    "action": "InventoryOnOff",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "K&M",
            "bindingGroup": "K&M",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}